# jubilant-computing-machine

./: .gitignore  LICENSE  README.md  WIP.patch  pyproject.toml
.backup/: ChatPage.tsx.20260228-023628.bak  books.py.20260228-060644.bak  kobold_client.fixed.20260228-015204.py
.github/workflows/: backend-tests.yml
backend/core/: main.py  requirements-termux.txt  requirements.txt
backend/core/routers/: books.py  chat.py  companion.py  memory.py  online.py  retrieval.py  sandbox.py  tasks.py  voice.py
backend/embeddings/: main.py  requirements-lite-termux.txt  requirements.txt
backend/sandbox/: requirements-termux.txt
docs/: api.md  architecture.md  companion-implementation-plan.md  companion-vision.md  expert-opinion.md  handoff-v2.md  installation.md  multimodal-rag-week1.md  multimodal-rag-week2.md  multimodal-rag-week3.md  repo-audit-overview.md  repo-full-audit.md  repository-analysis-2026-03-16.md  rfc-v31-integration-findings.md  system-analysis-2026-03-17.md  termux-roadmap-gap-security.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  terminalStore.ts
scripts/: full-end-to-end-check.sh
termux/: check-no-internet-leak.sh  check-online-tools.sh  cleanup-memory-noise.sh  constraints-termux.txt  debug-chat.sh  deploy.sh  diagnose.sh  fix-and-diagnose.sh  full-smoke.sh  pinned-safe-tag  reset-all-memory.sh  rollback-last-good.sh  run-memory-tests.sh  setup.sh  start-kobold.sh  start-services.sh  stop-services.sh  verify-chat-fix.sh  verify-repo-integrity.sh  voice-readiness-check.sh
(+41 files in other folders)
